# just_table

./: .flake8  .gitignore  .pylintrc  .travis.yml  README.md  __init__.py  just_table.py  pyproject.toml
pelican_just_table/: __init__.py
